force-app/main/default/objects/Batch_Summary__c/Batch_Summary__c.object-meta.xml
<CustomObject>
    <label>Batch Summary</label>
    <nameField>
        <label>Batch Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>