force-app/main/default/objects/Batch_Summary__c/fields/Total_Account_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Processed__c</fullName>
    <label>Total Account Processed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>