force-app/main/default/objects/Batch_Summary__c/fields/Total_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Total_Task_Created__c</fullName>
    <label>Total Task Created</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>